Popup style fix: unify off_message vertical spacing, js-toggle fix for higher ppi (using WQXGA made a horizontal space under the first slider)

--- a/common/popup.css
+++ b/common/popup.css
@@ -107,7 +107,9 @@ input#js-toggle {
 }
 
 label.js-toggle {
-	padding: 0.5ex;
+	height: 25px;
+	padding: 3.5px;
+	cursor: pointer;
 	border: 1px var(--separator-color) solid;
 	background-color: var(--button-background-color);
 	color: var(--button-text-color);
@@ -138,10 +140,14 @@ label.js-toggle:after {
 .off_message{
 	font-size: large;
 	display: none;
+	margin: 0px;
+	height: 34px;
+	line-height: 34px;
+	vertical-align: middle;
 }
 
 .off > .off_message {
-	display: block;
+	display: inline-block;
 }
 
 .off > .switch_wrapper {
